--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -31,20 +31,35 @@ jobs:
         run: npm run lint
 
       - name: 🏗️ Build Application
-        run: npm run build
+        run: npm run build # Creates the 'dist' folder
+
+      - name: ⬆️ Upload Build Artifact
+        # Uploads the 'dist' folder (or whatever folder your build command creates)
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: dist # IMPORTANT: Change 'dist' to your actual build folder name if different (e.g., 'build')
 
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
+    # The condition prevents deployment for feature branches or commits containing 'test:'
     if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'test:')
     steps:
-      - name: ⚙️ Checkout Repository
-        uses: actions/checkout@v4
+      - name: ⬇️ Download Build Artifact
+        # Downloads the compiled files from the previous job
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build
+          path: . # Downloads the 'dist' folder into the current working directory
 
       - name: 🚀 Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
+          # Vercel deployment credentials
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
+          # Set the working directory to the path where the artifact was downloaded (dist)
+          working-directory: dist 
           vercel-args: '--prod'
