--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -48,6 +48,8 @@ jobs:
     steps:
       - name: ⚙️ Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: ⬇️ Download Build Artifact
         # Downloads the compiled files from the previous job
